PC-8341: bug firefox price placeholder cropped in stock page

--- a/src/components/pages/Offers/Offer/Stocks/StockItem/StockItem.scss
+++ b/src/components/pages/Offers/Offer/Stocks/StockItem/StockItem.scss
@@ -85,6 +85,11 @@
     }
   }
 
+  .price-input {
+    padding-left: rem(10px);
+    padding-right: rem(10px);
+  }
+
   &.disabled {
     box-shadow: none;
   }
