--- a/src/components/pages/Offers/Offer/Stocks/Stocks.scss
+++ b/src/components/pages/Offers/Offer/Stocks/Stocks.scss
@@ -34,11 +34,6 @@ $buttonHeight: rem(40px);
     text-align: left;
   }
 
-  th.action-column {
-    max-width: rem(61px);
-    min-width: rem(61px);
-  }
-
   table td,
   table th {
     padding: rem(10px) rem(5px);
